k8s/04-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: habit-tracker
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
